Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-NEXTAUTH_URL=
-JWT_SECRET=
+NEXTAUTH_URL=https://sixmarket-alinilucas-projects.vercel.app/
+JWT_SECRET=supersecret
 
 # PostgreSQL connection string used for migrations
 DIRECT_URL=
