--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ NEXTAUTH_URL=https://sixmarket-alinilucas-projects.vercel.app/
 JWT_SECRET=supersecret
 
 # PostgreSQL connection string used for migrations
-DIRECT_URL=
+DIRECT_URL=postgresql://neondb_owner:7xMkVgZvsbD4@ep-little-brook-a2eet2uu.eu-central-1.aws.neon.tech/aicigasesti?sslmode=require
 
 # PostgreSQL connection string with pgBouncer config — used by Prisma Client
-DATABASE_URL=
+DATABASE_URL=postgresql://neondb_owner:7xMkVgZvsbD4@ep-little-brook-a2eet2uu.eu-central-1.aws.neon.tech/aicigasesti?sslmode=require
 
 # Use JSON protocol for ~9x faster queries
 PRISMA_ENGINE_PROTOCOL=json
