--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=827672333666-ptk728dju3kgtcfjg8762fjounmdu8aa.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=https://sixmarket-alinilucas-projects.vercel.app/
 JWT_SECRET=supersecret
 
